Fixed radi and checkbox alignment

--- a/src/3-general/form/_radio_checkbox.scss
+++ b/src/3-general/form/_radio_checkbox.scss
@@ -1,4 +1,6 @@
 input[type="radio"],
 input[type="checkbox"] {
+  width: 13px;
+  height: 13px;
   margin-top: 0.6em;
 }
